# tano

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  Package.swift  README.md  flake.nix  install.sh  wasmer.toml
.github/workflows/: ci.yml  napi-wasmer.yml  test-and-build.yml
Sources/Tano/: Tano.swift
apps/tano-go/: Info.plist  NetworkScanner.swift  README.md  TanoGoApp.swift  TanoGoBridgeJS.swift  TanoGoView.swift  TanoGoWebView.swift
bin-compat/: node
cmake/: android-toolchain.cmake  ios-toolchain.cmake
docs/architecture/: BRIDGE.md  OVERVIEW.md  PLUGINS.md  TANOJSC.md
docs/guides/: android-integration.md  ios-integration.md  performance.md  xcode-setup.md
docs/mintlify/: docs.json
examples/: _probe_string_decoder_mismatch.js  buffer-string-decoder-parity.js  debug-error-monitor.js  dns-require-smoke.js  events-smoke.js  http-require-smoke.js  http-roundtrip-smoke.js  http-server.js  net-roundtrip-smoke.js  runtime-modules-showcase.js  url-querystring-showcase.js
examples/accounting-app/: package.json  tano.config.ts
examples/android-demo/: README.md
examples/chat-app/: README.md  package.json  tano.config.ts
examples/ios-demo/: EdgeJS-Bridging-Header.h  README.md  project.yml
examples/notes-app/: README.md  package.json  tano.config.ts
examples/ota-server/: README.md  index.ts
examples/todo-app/: README.md  package.json  tano.config.ts
lib/internal/: util.js
mission_control/: ROADMAP.md
mission_control/logs/: 2026-03-20-init.md  2026-03-20-phase1-complete.md  2026-03-21-all-delivered.md  2026-03-21-android-plugins.md  2026-03-21-crypto-demo.md  2026-03-21-docs-sync.md  2026-03-21-phase2-bridge.md  2026-03-21-phase3-webview.md  2026-03-21-phase4-plugins.md  2026-03-21-phase5-cli.md  2026-03-21-phase6-android.md  2026-03-21-phase7-distribution.md  2026-03-21-phase8-ecosystem.md  2026-03-21-stable.md  2026-03-21-tier1-features.md  2026-03-21-v010-features.md
mission_control/tasks/: 001-tanojsc-core-runtime.md  002-bridge-protocol.md  003-webview-layer.md  004-plugin-system.md  005-cli-tooling.md  006-android-sync.md  007-existing-app-integration.md  008-post-v010-features.md
napi/: CMakeLists.txt
napi/include/: unofficial_napi.h
napi/jsc/: CMakeLists.txt  README.md
napi/jsc/cmake/: NapiBuildCache.cmake  NapiJscResolver.cmake
napi/jsc/src/: bun_jsc_compat.cc  js_native_api_jsc.cc  jsc_runtime_config.cc  unofficial_napi.cc  unofficial_napi_contextify.cc
napi/jsc/src/internal/: napi_jsc_env.h
napi/jsc/tests/: CMakeLists.txt
napi/jsc/tests/runners/: jsc_runtime_probe.cc  test_10_number.cc  test_12_error.cc  test_13_symbol.cc  test_14_exception.cc  test_15_function.cc  test_16_reference.cc  test_18_conversions.cc  test_19_properties.cc  test_25_object_exceptions.cc  test_26_object_null.cc  test_27_object.cc  test_2_function_arguments.cc  test_30_date.cc  test_31_dataview.cc  test_33_typedarray.cc  test_34_new_target.cc  test_35_promise.cc  test_36_handle_scope.cc  test_37_reference_double_free.cc  test_66_unofficial_unsupported.cc  test_67_jsc_config_guard.cc  test_8_passing_wrapped.cc  test_9_array.cc  test_env.h  upstream_js_test.h
napi/jsc/tools/: build_webkit_macos.sh  bun_webkit_release_tag.sh  check_symbol_coverage.py  fetch_bun_webkit_macos.sh  run_napi_jsc_tests_macos.sh
napi/v8/: CMakeLists.txt
napi/v8/tests/: CMakeLists.txt  PORTABILITY_MATRIX.md  README.md
napi/v8/tests/runners/: test_11_constructor.cc  test_14_exception.cc  test_15_function.cc  test_17_string.cc  test_25_object_exceptions.cc  test_26_object_null.cc  test_27_object.cc  test_29_bigint.cc  test_32_sharedarraybuffer.cc  test_39_cannot_run_js.cc  test_3_callbacks.cc  test_40_pending_exception.cc  test_41_instance_data.cc  test_4_object_factory.cc  test_5_function_factory.cc  test_65_unofficial_contextify.cc  test_6_object_wrap.cc  test_7_factory_wrap.cc  test_env.h  upstream_js_test.h
plans/: framework-integration-tests.md
scripts/: build-android.sh  build-ios.sh  check_internal_binding_dispatch.py  dedupe_gtest_manifest.py  framework-test.js  generate_builtin_catalog_header.py  generate_vendored_openssl_cmake.py  run-phase0-fixture.sh  test-local-v8.sh  test-simulator.sh
src/: builtin_catalog.cc  builtin_catalog.h  edge_active_resource.cc  edge_active_resource.h  edge_async_wrap.cc  edge_async_wrap.h  edge_buffer.cc  edge_buffer.h  edge_cares_wrap.cc  edge_cares_wrap.h  edge_cli.cc  edge_cli.h  edge_compat_exec.cc  edge_compat_exec.h  edge_crypto.cc  edge_crypto.h  edge_embed.cc  edge_embed.h  edge_encoding.cc  edge_encoding.h  edge_encoding_ids.h  edge_env_loop.h  edge_environment.cc  edge_environment.h  edge_environment_runtime.cc  edge_environment_runtime.h  edge_errors_binding.cc  edge_errors_binding.h  edge_fs.cc  edge_fs.h  edge_handle_wrap.cc  edge_handle_wrap.h  edge_http_parser.cc  edge_http_parser.h  edge_js_stream.cc  edge_js_stream.h  edge_js_udp_wrap.cc  edge_js_udp_wrap.h  edge_main.cc  edge_module_loader.cc  (+57 more)
src/crypto/: edge_crypto_binding.cc  edge_crypto_binding.h  edge_crypto_bio.cc  edge_crypto_bio.h  edge_secure_context_bridge.h
test/: .gitignore  README.md  nodejs_test_harness
tests/: CMakeLists.txt
tests/fixtures/: phase0_hello.js
tests/js/: log-stderr.js  webserver.js
tests/runners/: test_0_runtime_phase01.cc  test_1_cli_phase01.cc  test_2_module_loader_phase02.cc  test_3_node_dropin_subset_phase02.cc  test_4_internal_binding_dispatch_phase02.cc  test_5_internal_binding_parity_phase03.cc  test_embed_api.cc  test_env.h
wasix/: WASIX_TODO.md  build-wasix.sh  setup-wasix-deps.sh  wasix-toolchain.cmake
wasmer-examples/: .gitignore  README.md
wasmer-examples/python-fastapi-sqlalchemy/: README.md  alembic.ini  pyproject.toml
wasmer-examples/python-fastapi-sqlalchemy/migrations/: env.py  script.py.mako
wasmer-examples/python-fastapi-sqlalchemy/migrations/versions/: 20250130_create_todos.py
wasmer-examples/python-fastapi-sqlalchemy/src/: __init__.py  database.py  main.py  models.py  schemas.py
wasmer-examples/python-fastapi-sqlalchemy/src/static/: index.html
(+399 files in other folders)
